apps/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: bentopdf
  labels:
    app: bentopdf
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: bentopdf
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: bentopdf
          image: bentopdfteam/bentopdf-simple:2.8.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - name: bento-cache
              mountPath: /var/cache/nginx
            - name: bento-nginx
              mountPath: /etc/nginx/tmp
      volumes:
        - name: bento-cache
          emptyDir: {}
        - name: bento-nginx
          emptyDir: {}
