apps/bentopdf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf-lan
  namespace: bentopdf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pdf.wevelsiep.com`)
      kind: Rule
      services:
        - name: bentopdf
          port: 80
